updated readme w/ new info

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 NOTE: Many equations come from Akh Morning Allagan Studies division
 Found here: https://www.akhmorning.com/allagan-studies/how-to-be-a-math-wizard/shadowbringers/#pages-in-this-guide
+and here: https://docs.google.com/document/d/1OpfKYmf31FpES3IHOrl3H8phU4Np8FChH4B4lP1ZE08/edit#
